<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9DDF4"
    android:orientation="vertical"
    tools:context=".Budget.Budget_ChartPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:padding="6dp"
        android:text="EXPENSE ANALYSIS"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/budgetpiechart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>