...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:srcCompat="@android:drawable/ic_menu_delete" />
        </LinearLayout>

...
