...
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="58dp"
        android:text="@string/inc_banner"
        android:textSize="@dimen/banners"
        app:layout_constraintBottom_toTopOf="@+id/inc_labourRecycle"
        app:layout_constraintStart_toStartOf="@+id/inc_labour"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inc_labourRecycle"
        android:layout_width="375dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inc_labour" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/inc_fab"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginBottom="34dp"
        android:src="@drawable/baseline_attach_money_24"
...
